--- a/home/templates/includes/footer.html
+++ b/home/templates/includes/footer.html
@@ -2,10 +2,7 @@
 
 <footer class="main-footer">
 
-  <strong>&copy; AdminLTE.io</strong> - coded by <a target="_blank" href="https://appseed.us">AppSeed</a>.
+  <strong>&copy; SMIS </strong> - coded by <a target="_blank" href="https://github.com/CedrickChu">Cedrick Chu</a>.
 
-  <div class="float-right d-none d-sm-inline-block">
-    <b>Version</b> 3.2.0
-  </div>
 
 </footer>
