--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
 
-{% block title %} {% endblock title %}
+{% block title %} Dashboard {% endblock title %}
 
 {% block extrastyle %}
 
