--- a/home/templates/maintenance/gradelevel_list.html
+++ b/home/templates/maintenance/gradelevel_list.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
 
-{% block title %}AdminLTE 3 | Dashboard{% endblock title %}
+{% block title %}Grade Level List{% endblock title %}
 
 {% block extrastyle %}
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
