--- a/home/templates/layouts/base.html
+++ b/home/templates/layouts/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="/static/images/logo.png">
     <title>Little Angels | {% block title %}{% endblock title %}</title>
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -59,10 +60,51 @@
     <!-- Selectize.js JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/js/standalone/selectize.min.js"></script>
     <script src="/static/assets/js/paper-dashboard.js?v=2.0.0" type="text/javascript"></script>
+    <style>
+        .spinner {
+           width: 100px;
+           height: 100px;
+           display: grid;
+           border-radius: 50%;
+           -webkit-mask: radial-gradient(farthest-side,#0000 40%,#ff8818 41%);
+           background: linear-gradient(0deg ,rgba(255,136,24,0.5) 50%,rgba(255,136,24,1) 0) center/4.5px 100%,
+                linear-gradient(90deg,rgba(255,136,24,0.25) 50%,rgba(255,136,24,0.75) 0) center/100% 4.5px;
+           background-repeat: no-repeat;
+           animation: spinner-d3o0rx 1s infinite steps(12);
+        }
+        
+        .spinner::before,
+        .spinner::after {
+           content: "";
+           grid-area: 1/1;
+           border-radius: 50%;
+           background: inherit;
+           opacity: 0.915;
+           transform: rotate(30deg);
+        }
+        
+        .spinner::after {
+           opacity: 0.83;
+           transform: rotate(60deg);
+        }
+        
+        @keyframes spinner-d3o0rx {
+           100% {
+              transform: rotate(1turn);
+           }
+        }
+        </style>
   {% block extrastyle %}{% endblock extrastyle %}
 </head>
 <body class="{% block bodyclass %}{% endblock bodyclass %}">
     <div class="wrapper">
+        {% block preloader %}
+            <!-- Preloader -->
+            <div class="preloader flex-column justify-content-center align-items-center">
+            <img class="animation__shake" src="{% static 'images/logo.png' %}" alt="logo" height="400" width="500"><br><br><br>
+            <div class="spinner"></div>
+            </div>
+        {% endblock preloader %}
         {% block header %}
             {% include 'includes/navigation-light.html' %}
         {% endblock header %}
