--- a/home/templates/student/all_student_list.html
+++ b/home/templates/student/all_student_list.html
@@ -43,15 +43,16 @@
                         <select name="grade_level" class="form-control" style="height:40px;">
                             <option value="">Select Grade Level (Default Current)</option>
                             {% for level in grade_levels %}
-                            <option value="{{ level.id }}" {% if request.GET.grade_level == level.id|stringformat:'s' %} selected {% endif %}>{{ level.name }}</option>
+                                <option value="{{ level.id }}" {% if request.GET.grade_level == level.id|stringformat:'s' %} selected {% endif %}>{{ level.name }}</option>
                             {% endfor %}
                         </select>
                     </div>
                     <div class="input-group no-border" style="float:right; width:20%; margin-right: 10px;">
                         <select name="school_year" class="form-control" style="height:40px;">
                             <option value="">Select School Year (Default Current Year)</option>
+                            {% comment %} <option value="all" {% if request.GET.school_year == 'all' %}selected{% endif %}>All Years</option>  {% endcomment %}
                             {% for year in school_years %}
-                            <option value="{{ year.id }}" {% if request.GET.school_year == year.id|stringformat:'s' %} selected {% endif %}>{{ year.year }}</option>
+                                <option value="{{ year.id }}" {% if request.GET.school_year == year.id|stringformat:'s' %} selected {% endif %}>{{ year.year }}</option>
                             {% endfor %}
                         </select>
                     </div>
@@ -59,6 +60,7 @@
                         <button style="height: 40px;" type="submit" class="btn btn-primary">Filter</button>
                     </div>
                 </form>
+                
               </div>
               <!-- /.card-header -->
               <div class="card-body">
