--- a/home/templates/includes/pagination.html
+++ b/home/templates/includes/pagination.html
@@ -3,8 +3,20 @@
         <ul class="pagination">
             <!-- First and Previous page links -->
             {% if page_obj.has_previous %}
-                <li class="page-item"><a class="page-link" href="?page=1">First</a></li>
-                <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="?page=1
+                        {% if grade_level_filter %}&grade_level={{ grade_level_filter }}{% endif %}
+                        {% if school_level_filter %}&school_year={{ school_level_filter }}{% endif %}
+                        {% if status_filter %}&status={{ status_filter }}{% endif %}
+                    ">First</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}
+                        {% if grade_level_filter %}&grade_level={{ grade_level_filter }}{% endif %}
+                        {% if school_level_filter %}&school_year={{ school_level_filter }}{% endif %}
+                        {% if status_filter %}&status={{ status_filter }}{% endif %}
+                    ">Previous</a>
+                </li>
             {% endif %}
 
             <!-- Page numbers -->
@@ -12,14 +24,32 @@
                 {% if page_num == page_obj.number %}
                     <li class="page-item active"><span class="page-link">{{ page_num }}</span></li>
                 {% else %}
-                    <li class="page-item"><a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_num }}
+                            {% if grade_level_filter %}&grade_level={{ grade_level_filter }}{% endif %}
+                            {% if school_level_filter %}&school_year={{ school_level_filter }}{% endif %}
+                            {% if status_filter %}&status={{ status_filter }}{% endif %}
+                        ">{{ page_num }}</a>
+                    </li>
                 {% endif %}
             {% endfor %}
 
             <!-- Next and Last page links -->
             {% if page_obj.has_next %}
-                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
-                <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">Last</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}
+                        {% if grade_level_filter %}&grade_level={{ grade_level_filter }}{% endif %}
+                        {% if school_level_filter %}&school_year={{ school_level_filter }}{% endif %}
+                        {% if status_filter %}&status={{ status_filter }}{% endif %}
+                    ">Next</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}
+                        {% if grade_level_filter %}&grade_level={{ grade_level_filter }}{% endif %}
+                        {% if school_level_filter %}&school_year={{ school_level_filter }}{% endif %}
+                        {% if status_filter %}&status={{ status_filter }}{% endif %}
+                    ">Last</a>
+                </li>
             {% endif %}
         </ul>
         
