--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -83,7 +83,7 @@
                         <span class="info-box-icon bg-purple elevation-1"><i class="fas fa-calendar"></i></span>
 
                         <div class="info-box-content">
-                            <span class="info-box-text">Total Activities in the Last 30 Days:</span>
+                            <span class="info-box-text">Logs in the last 30 Days:</span>
                             <span class="info-box-number"> {{ admin_activity_last_30_days }}</span>
                         </div>
                     </div>
@@ -285,6 +285,7 @@
                 }
             }
         });
+        
         $(document).ready(function () {
             var calendar = $('#calendar').fullCalendar({
                 header: {
@@ -379,7 +380,6 @@
                 `;
                 $('body').append(modalHtml);
     
-                // Initialize Flatpickr
                 flatpickr("#eventDateRange", {
                     mode: "range",
                     dateFormat: "Y-m-d H:i",
@@ -455,7 +455,10 @@
                         </div>
                         <div class="form-group">
                             <label for="updateEventColor">Event Color:</label>
-                            <input type="color" id="updateEventColor" class="form-control" value="${event.color}" />
+                            <div class="input-group">
+                                <input type="color" id="updateEventColor" class="form-control" value="${event.color}" />
+                                <button id="copyEventColor" class="btn btn-secondary ml-2">Copy</button>
+                            </div>
                         </div>
                         <button id="saveUpdatedEvent"  class='btn btn-info'>Update</button>
                         <button id="deleteEvent" class='btn btn-danger'>Delete</button>
@@ -533,6 +536,14 @@
                         alert("Please fill all fields.");
                     }
                 });
+                document.getElementById('copyEventColor').addEventListener('click', function () {
+                    const colorInput = document.getElementById('updateEventColor');
+                    navigator.clipboard.writeText(colorInput.value).then(() => {
+                        alert('Color copied to clipboard: ' + colorInput.value);
+                    }).catch(err => {
+                        console.error('Could not copy color: ', err);
+                    });
+                });
             
                 // Close modal
                 $('#closeUpdateModal').on('click', function () {
@@ -540,6 +551,7 @@
                 });
             }
         });
+
     </script>
   
     <!-- overlayScrollbars -->
