--- a/home/templates/student/edit_student_grade_modal.html
+++ b/home/templates/student/edit_student_grade_modal.html
@@ -1,76 +1,93 @@
-<div class="modal fade" id="editStudentGradeModal" tabindex="-1" role="dialog" aria-labelledby="editStudentGradeLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+<!-- Edit Student Grade Modal -->
+<div class="modal fade" id="editStudentGradeModal" tabindex="-1" role="dialog" aria-labelledby="editStudentGradeModalLabel">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="editStudentGradeLabel">Edit Student Grade</h5>
+                <h5 class="modal-title" id="editStudentGradeModalLabel">Update Grade</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form id="edit-grade-form">
+            <form id="updateGradeForm" method="POST" action="{% url 'update_student_grade' 0 %}">
+                {% csrf_token %}
                 <div class="modal-body">
-                    <input type="hidden" id="gradeId" name="grade_id">
+                    <input type="hidden" name="grade_id" id="edit-grade-id">
                     <div class="form-group">
-                        <label for="subjectName">Subject</label>
-                        <input type="text" id="subjectName" class="form-control" readonly>
+                        <label for="edit-first-grading">First Grading</label>
+                        <input type="number" step="0.01" name="first_grading" id="edit-first-grading" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="firstGrading">First Grading</label>
-                        <input type="number" id="firstGrading" name="first_grading" class="form-control">
+                        <label for="edit-second-grading">Second Grading</label>
+                        <input type="number" step="0.01" name="second_grading" id="edit-second-grading" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="secondGrading">Second Grading</label>
-                        <input type="number" id="secondGrading" name="second_grading" class="form-control">
+                        <label for="edit-third-grading">Third Grading</label>
+                        <input type="number" step="0.01" name="third_grading" id="edit-third-grading" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="thirdGrading">Third Grading</label>
-                        <input type="number" id="thirdGrading" name="third_grading" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label for="fourthGrading">Fourth Grading</label>
-                        <input type="number" id="fourthGrading" name="fourth_grading" class="form-control">
+                        <label for="edit-fourth-grading">Fourth Grading</label>
+                        <input type="number" step="0.01" name="fourth_grading" id="edit-fourth-grading" class="form-control">
                     </div>
                 </div>
                 <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">Save Changes</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
                 </div>
             </form>
         </div>
     </div>
 </div>
 
-
 <script>
-    $(document).on('click', '#save-grade', function () {
-        // Create URL for adding a new grade (no need for grade_id)
-        let url = '/add-grade/'; // You should define this URL in your Django `urls.py`
+    $(document).ready(function() {
+        $('#editStudentGradeModal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget);
+            var id = button.data('id');
+            var first_grading = button.data('first_grading');
+            var second_grading = button.data('second_grading');
+            var third_grading = button.data('third_grading');
+            var fourth_grading = button.data('fourth_grading');
     
-        $.ajax({
-            type: 'POST',
-            url: url,
-            data: {
-                student: $('#editStudentGradeModal').data('student-id'), // The student's ID
-                subject: $('#editStudentGradeModal').data('subject-id'), // The subject's ID
-                first_grading: $('#edit-first-grading').val(),
-                second_grading: $('#edit-second-grading').val(),
-                third_grading: $('#edit-third-grading').val(),
-                fourth_grading: $('#edit-fourth-grading').val(),
-                csrfmiddlewaretoken: $('input[name="csrfmiddlewaretoken"]').val(), // CSRF token for security
-            },
-            success: function (response) {
-                if (response.success) {
-                    alert(response.message);
-                    location.reload(); 
-                } else {
-                    alert(response.message);
+            var modal = $(this);
+            modal.find('form').attr('action', "{% url 'update_student_grade' 0 %}"); // Set URL with placeholder
+            modal.find('#edit-grade-id').val(id);
+            modal.find('#edit-first-grading').val(first_grading);
+            modal.find('#edit-second-grading').val(second_grading);
+            modal.find('#edit-third-grading').val(third_grading);
+            modal.find('#edit-fourth-grading').val(fourth_grading);
+        });
+    
+        $('#updateGradeForm').submit(function(event) {
+            event.preventDefault(); 
+            var form = $(this);
+            var url = form.attr('action');
+            var formData = form.serialize();
+    
+            // Collect values and set empty inputs to null
+            var first_grading = $('#edit-first-grading').val() ? $('#edit-first-grading').val() : null;
+            var second_grading = $('#edit-second-grading').val() ? $('#edit-second-grading').val() : null;
+            var third_grading = $('#edit-third-grading').val() ? $('#edit-third-grading').val() : null;
+            var fourth_grading = $('#edit-fourth-grading').val() ? $('#edit-fourth-grading').val() : null;
+    
+            $.ajax({
+                type: 'POST',
+                url: url.replace('0', $('#edit-grade-id').val()), 
+                data: {
+                    first_grading: first_grading,
+                    second_grading: second_grading,
+                    third_grading: third_grading,
+                    fourth_grading: fourth_grading,
+                    csrfmiddlewaretoken: $('input[name="csrfmiddlewaretoken"]').val(),
+                },                
+                success: function(response) {
+                    $('#editStudentGradeModal').modal('hide'); 
+                    location.reload();
+                },
+                error: function(error) {
+                    console.log(error);
+                    alert('Failed to update grade.'); 
                 }
-            },
-            error: function (xhr, status, error) {
-                console.error(xhr.responseText);
-                alert('An error occurred while adding the grade.');
-            }
+            });
         });
     });
-    
 </script>
