--- a/home/templates/student/student_academic_record.html
+++ b/home/templates/student/student_academic_record.html
@@ -11,31 +11,21 @@
 <link rel="stylesheet" href="{% static 'plugins/jqvmap/jqvmap.min.css' %}">
 <link rel="stylesheet" href="{% static 'plugins/daterangepicker/daterangepicker.css' %}">
 <link rel="stylesheet" href="{% static 'plugins/summernote/summernote-bs4.min.css' %}">
-
 {% endblock extrastyle %}
 
-{% block bodyclass %}hold-transition sidebar-mini layout-fixed layout-navbar-fixed"{% endblock bodyclass %}
+{% block bodyclass %}hold-transition sidebar-mini layout-fixed layout-navbar-fixed{% endblock bodyclass %}
 {% block content %}
 <div class="content-wrapper">
     <div class="row mb-2">
         <div class="col-sm-6">
             <h1 style='margin-left:20px;'>Student Grade</h1>
         </div>
-        <div class="col-sm-6">
-            <ol class="breadcrumb float-sm-right">
-                {% if request.user.is_superuser %}
-                <button style="float:left" type="button" class="btn btn-info" data-toggle="modal" data-target="#addStudentGradeModal">
-                    <i class="glyphicon glyphicon-plus"></i> New Entry
-                </button>
-                {% endif %}
-            </ol>
-        </div>
     </div> 
     <div class="col-md-12" id="s_page">
         <div class="card">
             <div class="card-header">
                 <i><h2>{{ student_info.student.first_name }} {{ student_info.student.last_name }}</h2></i> 
-                <i><h4>{{ student_info.grade_level }} </h4></i>
+                <i><h4>{{ student_info.grade_level }} {{student_info.school_year.year }} </h4></i>
             </div>
             <div class="card-body">
                 <div class="panel-body">
@@ -62,26 +52,47 @@
                                 <td>{{ grade.second_grading|default:"N/A" }}</td>
                                 <td>{{ grade.third_grading|default:"N/A" }}</td>
                                 <td>{{ grade.fourth_grading|default:"N/A" }}</td>
-                                <td>{{ grade.final_grade|default:"N/A"}}</td>
-                            {% endwith %}
+                                <td>{{ grade.final_grade|default:"N/A" }}</td>
+
                                 {% if request.user.is_superuser %}
                                 <td>
-                                    <button class="btn btn-warning btn-sm" data-toggle="modal" data-target="#AddStudentGradeModal" 
-                                            data-student-id="{{ student.id }}" 
-                                            data-subject-id="{{ subject.id }}">
-                                        Add Grade
-                                    </button>
-                                    <button class="btn btn-danger btn-sm delete-grade-btn" data-id="{{ grade.id }}">
-                                        Delete
-                                    </button>
+                                    {% if grade %} <!-- Check if grade exists for the subject -->
+                                        <!-- If grade exists, show Update Grade button -->
+                                        <button class="btn btn-warning btn-sm" 
+                                        data-toggle="modal" data-target="#editStudentGradeModal" 
+                                        data-id="{{ grade.id }}" 
+                                        data-subject="{{ grade.subject.id }}" 
+                                        data-first_grading="{{ grade.first_grading }}" 
+                                        data-second_grading="{{ grade.second_grading }}" 
+                                        data-third_grading="{{ grade.third_grading }}" 
+                                        data-fourth_grading="{{ grade.fourth_grading }}">
+                                            Update
+                                        </button>
+                                    {% else %}
+                                        <!-- If grade doesn't exist, show Add Grade button -->
+                                        <button class="btn btn-warning btn-sm" style='width:95%; margin:auto;'
+                                                data-toggle="modal" 
+                                                data-target="#AddStudentGradeModal" 
+                                                data-student-id="{{ student_info.student.id }}" 
+                                                data-subject-id="{{ subject.id }}">
+                                            Add Grade
+                                        </button>
+                                    {% endif %}
+                                    
+                                    {% if grade %} <!-- Only show delete button if grade exists -->
+                                        <button class="btn btn-danger btn-sm delete-grade-btn" data-id="{{ grade.id }}">
+                                            Delete
+                                        </button>
+                                    {% endif %}
                                 </td>
                                 {% endif %}
                             </tr>
-                            {% empty %}
-                            <tr>
-                                <td colspan="7">No grades available.</td>
-                            </tr>
-                            {% endfor %}
+                            {% endwith %}
+                        {% empty %}
+                        <tr>
+                            <td colspan="7">No grades available.</td>
+                        </tr>
+                        {% endfor %}
                         </tbody>
                     </table>
                 </div>
@@ -118,9 +129,6 @@
 </script>
 
 {% include 'student/edit_student_grade_modal.html' %}
-
-{% include 'student/student_grade_add_modal.html'   %}
-
-
+{% include 'student/student_grade_add_modal.html' %}
 
 {% endblock %}
